--- a/index.html
+++ b/index.html
@@ -85,4 +85,108 @@
     </div>
 
     <div id="deposit" class="tab-content">
-        <h3>ገን
+        <h3>ገንዘብ ያስገቡ</h3>
+        <div class="wallet-box" style="border-left: 4px solid var(--yellow);">
+            <p>ቴሌብር: <b>09XXXXXXXX</b></p>
+            <input type="text" id="tid" placeholder="የግብይት ቁጥር (Transaction ID)">
+            <button class="btn" style="background:var(--yellow); color:black;" onclick="sendData('DEPOSIT')">ደረሰኝ አረጋግጥ</button>
+        </div>
+    </div>
+
+    <div id="withdraw" class="tab-content">
+        <h3>ገንዘብ ማውጫ</h3>
+        <div class="wallet-box" style="border-left: 4px solid var(--green);">
+            <input type="number" placeholder="የብር መጠን">
+            <input type="tel" placeholder="የቴሌብር ስልክ ቁጥር">
+            <button class="btn" style="background:var(--green); color:white;" onclick="sendData('WITHDRAW')">አሁን አውጣ</button>
+        </div>
+    </div>
+
+    <script>
+        const tg = window.Telegram.WebApp;
+        tg.expand();
+
+        // Splash to Nav
+        setTimeout(() => {
+            document.getElementById('splash').style.display = 'none';
+            document.getElementById('main-nav').style.display = 'flex';
+            initPicker();
+        }, 2000);
+
+        function switchTab(id) {
+            document.querySelectorAll('.tab-content').forEach(t => { t.style.display='none'; t.classList.remove('active'); });
+            document.querySelectorAll('.nav-item').forEach(n => n.classList.remove('active'));
+            const activeTab = document.getElementById(id);
+            activeTab.style.display = 'block';
+            setTimeout(() => activeTab.classList.add('active'), 10);
+            event.currentTarget.classList.add('active');
+            if(id !== 'play') document.getElementById('game-view').style.display = 'none';
+        }
+
+        function initPicker() {
+            const picker = document.getElementById('picker');
+            picker.innerHTML = "";
+            for (let i = 1; i <= 200; i++) {
+                let div = document.createElement('div');
+                div.className = 'card-node';
+                div.innerText = i;
+                div.onclick = () => launchBingo(i);
+                picker.appendChild(div);
+            }
+        }
+
+        function launchBingo(num) {
+            document.getElementById('selector-zone').style.display = 'none';
+            document.getElementById('game-view').style.display = 'block';
+            document.getElementById('card-label').innerText = "ካርቴላ #" + num;
+            drawBoard(num);
+        }
+
+        function exitGame() {
+            document.getElementById('game-view').style.display = 'none';
+            document.getElementById('selector-zone').style.display = 'block';
+        }
+
+        function drawBoard(seed) {
+            const board = document.getElementById('board');
+            board.innerHTML = "";
+            const ranges = [[1,15],[16,30],[31,45],[46,60],[61,75]];
+            for(let r=0; r<5; r++){
+                for(let c=0; c<5; c++){
+                    let min = ranges[c][0], max = ranges[c][1];
+                    let val = (r===2 && c===2) ? "FREE" : Math.floor((Math.abs(Math.sin(seed * (c+1) + r)) * (max - min + 1)) + min);
+                    let cell = document.createElement('div');
+                    cell.className = 'cell' + (val==="FREE" ? " marked" : "");
+                    cell.innerText = val;
+                    cell.onclick = function() { 
+                        this.classList.toggle('marked'); 
+                        tg.HapticFeedback.impactOccurred('medium'); 
+                        if(this.classList.contains('marked')) updateBall(this.innerText);
+                    };
+                    board.appendChild(cell);
+                }
+            }
+        }
+
+        function updateBall(num) {
+            const ball = document.getElementById('active-ball');
+            ball.innerText = num;
+            ball.classList.remove('pop');
+            void ball.offsetWidth;
+            ball.classList.add('pop');
+        }
+
+        function sendData(type) {
+            tg.sendData(JSON.stringify({action: type}));
+            alert("ጥያቄዎ ተልኳል!");
+        }
+
+        function claimBingo() {
+            tg.sendData(JSON.stringify({action: "BINGO_CLAIM"}));
+            tg.HapticFeedback.notificationOccurred('success');
+            alert("ቢንጎ! መረጃው ተልኳል።");
+        }
+    </script>
+    <style>@keyframes spin { to { transform: rotate(360deg); } }</style>
+</body>
+</html>
