--- a/index.html
+++ b/index.html
@@ -942,8 +942,9 @@
     <script>
         // --- Firebase Config (ዳጊ! እዚህ ጋር የራስህን ቁልፍ ግድ መተካት አለብህ) ---
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            databaseURL: "https://your-project-default-rtdb.firebaseio.com",
+            apiKey: "  Your token was replaced with a new one. You can use this token to access HTTP API:
+8554733015:AAHAYbYVDzGWXOLXBOUnOgf7uBH-QLhkyxk   ",
+            databaseURL: "   Https://dagi-bingo-default-rtdb.firebaseio.com ",
             projectId: "your-project-id"
         };
         firebase.initializeApp(firebaseConfig);
